[tool.poetry]
name = "streaming-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "0.27.0"
minio = "7.2.5"
flask = "3.0.2"
flask-smorest = "0.44.0"
py-avro-schema = "3.6.0"
pydantic = "2.6.4"
confz = "^2.0.1"
confluent-kafka = "2.3.0"
fastavro = "1.9.1"
requests = "2.31.0"
pyyaml = "^6.0.1"
pyspark = "^3.5.0"
gunicorn = "^22.0.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.2.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
mkdocs-material = "^9.5.21"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true